--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -5,10 +5,6 @@
 }
 
 <div>
-    @if (TempData["ResultText"] is not null)
-    {
-        
-    }
     <form asp-action="Details" class="input-group mb-3" id="pathform">
         <div class="input-group">
             <input type="text" class="form-control" name="filterString" id="currentPath" value="@ViewBag.CurrentPath" />
@@ -212,14 +208,38 @@
         document.getElementById("addFolderField").classList.toggle("hiddenfield");
     }
 </script>
-@if (TempData["ResultText"] is not null)
+
+@if (ViewBag.Notifications is not null)
 {
+    @foreach (NotificationAbstract n in ViewBag.Notifications)
+    {
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="10000">
+            <div class="toast-header">
+                <span class="rounded @(n.Color)" alt="..."></span>
+                <strong class="mr-auto">@n.Title</strong>
+                <small class="text-muted">just now</small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body">
+                @n.Text
+            </div>
+        </div>
+    }
     <script type="text/javascript">
 
         function AnimationFunction() {
-            
+
         }
 
         AnimationFunction();
+
+        var toastElList = [].slice.call(document.querySelectorAll('.toast'))
+        var toastList = toastElList.map(function (toastEl) {
+            return new bootstrap.Toast(toastEl, option)
+        })
+
+        toastList[0].show();
     </script>
 }
