--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -52,3 +52,11 @@ details[open] summary:before {
     display: none;
 }
 
+.notificationdiv{
+    z-index:10;
+    position:fixed;
+    right:5px;
+    bottom:5px;
+    height:100%;
+    width:20%;
+}
