Terminal and file upload started to elaborate, files need to be saved with filestream

--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -17,11 +17,11 @@
         </div>
         <div class="">
             <div class="btn-group" role="group">
-                <button type="button" class="btn btn-primary"><a asp-controller="Drive" asp-action="Details" asp-route-currentPath="@Model.CurrentPath"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+                <button type="button" class="btn btn-primary" id="refreshBtn"><a asp-controller="Drive" asp-action="Details" asp-route-currentPath="@Model.CurrentPath"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
                 <button type="button" class="btn btn-secondary"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded-circle align-middle" /></button>
-                <button type="button" class="btn btn-secondary"><a asp-controller="Drive" asp-action="UploadToCurrentFolder"><img src="~/utilities/cloud-upload.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+                <button type="button" class="btn btn-secondary" id="addFileBtn"><img src="~/utilities/cloud-upload.svg" width=" 20" height="20" class="rounded-circle align-middle" /></button>
                 <button type="button" class="btn btn-secondary" id="addFolderBtn"><img src="~/utilities/folder-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
-                <button type="button" class="btn btn-secondary"><a asp-controller="Drive" asp-action="OpenTerminal"><img src="~/utilities/terminal.svg" width=" 20" height="20" class="align-middle" /></a></button>
+                <button type="button" class="btn btn-secondary" id="terminalBtn"><img src="~/utilities/terminal.svg" width=" 20" height="20" class="align-middle" /></button>
                 <button type="button" class="btn btn-danger"><a asp-controller="Drive" asp-action="DeleteFromCurrentFolder"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
             </div>
         </div>
@@ -29,15 +29,41 @@
 </div>
 
 <div class="w-100">
-    <fieldset class="border border-4 border-dark p-2 m-2 rounded hiddenfield" id="addFolderField">
-        <legend class="btn btn-outline-primary rounded-pill w-auto">Add Folder</legend>
+    <fieldset class="bg-secondary border border-4 border-dark p-2 m-2 rounded @(TempData["FolderError"] is null ? "hiddenfield" : "")" id="addFolderField">
+        <legend class="btn btn-outline-dark rounded-pill w-auto">Add Folder</legend>
         <div class="d-flex justify-content-center w-100">
             <form asp-action="AddNewFolder" class="w-100">
                 <div class="w-100 d-inline-flex input-group form-group">
                     <input type="text" name="folderName" placeholder="Write new Folder name here..." class="d-inline form-control" />
-                    <button type="submit" class="btn btn-primary d-inline"><img src="~/utilities/folder-plus.svg" width=" 20" height="20" class="rounded-circle align-middle" /></button>
+                    <button type="submit" class="btn btn-primary d-inline"><img src="~/utilities/folder-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
                 </div>
+                @if (TempData["FolderError"] is not null)
+                {
+                    <span class="field-validation-valid text-danger mx-1 my-2">@TempData["FolderError"]</span>
+                }
             </form>
+        </div>
+    </fieldset>
+    <!------------------------------------------------------------->
+    <fieldset class="bg-secondary border border-4 border-dark p-2 m-2 rounded @(TempData["FileError"] is null ? "hiddenfield" : "")" id="addFileField">
+        <legend class="btn btn-outline-dark rounded-pill w-auto">Add Files</legend>
+        <div class="d-flex justify-content-center w-100">
+            <form asp-action="AddNewFiles" class="w-100" enctype="multipart/form-data">
+                <div class="w-100 d-inline-flex input-group form-group">
+                    <input type="file" multiple name="files" class="d-inline form-control" />
+                    <button type="submit" class="btn btn-primary d-inline"><img src="~/utilities/file-plus.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+                </div>
+                @if (TempData["FileError"] is not null)
+                {
+                    <span class="field-validation-valid text-danger mx-1 my-2">@TempData["FileError"]</span>
+                }
+            </form>
+        </div>
+    </fieldset>
+    <!------------------------------------------------------------->
+    <fieldset class="terminal border border-4 border-dark p-2 m-2 rounded @(TempData["CommandeResult"] is null ? "hiddenfield" : "")" id="commandField">
+        <div class="d-flex justify-content-start w-100">
+            Welcome to CloudTerminal!
         </div>
     </fieldset>
 </div>
@@ -202,9 +228,39 @@
 
     function init() {
         document.getElementById("addFolderBtn").addEventListener("click", AddFolderClicked, false);
+        document.getElementById("addFileBtn").addEventListener("click", AddFileClicked, false);
+        document.getElementById("terminalBtn").addEventListener("click", TerminalClicked, false);
+        document.getElementById("refreshBtn").addEventListener("click", RefreshClicked, false);
+        CheckSessionStorage();
     }
 
     function AddFolderClicked(e) {
         document.getElementById("addFolderField").classList.toggle("hiddenfield");
+        document.getElementById("addFileField").classList.add("hiddenfield");
+        document.getElementById("commandField").classList.add("hiddenfield");
+    }
+    function AddFileClicked(e) {
+        document.getElementById("addFolderField").classList.add("hiddenfield");
+        document.getElementById("addFileField").classList.toggle("hiddenfield");
+        document.getElementById("commandField").classList.add("hiddenfield");
+    }
+    function TerminalClicked(e) {
+        document.getElementById("addFolderField").classList.add("hiddenfield");
+        document.getElementById("addFileField").classList.add("hiddenfield");
+        document.getElementById("commandField").classList.toggle("hiddenfield");
+    }
+    function RefreshClicked(e) {
+        let element = "";
+        if (!document.getElementById("addFolderField").classList.contains("hiddenfield")) element = "addFolderField";
+        if (!document.getElementById("addFileField").classList.contains("hiddenfield")) element = "addFileField";
+        if (!document.getElementById("commandField").classList.contains("hiddenfield")) element = "commandField";
+        sessionStorage.setItem("openedMiniWindow", element);
+    }
+    function CheckSessionStorage() {
+        let item = sessionStorage.getItem("openedMiniWindow");
+        if (item !== null) {
+            document.getElementById(item).classList.toggle("hiddenfield")
+        }
+        sessionStorage.removeItem("openedMiniWindow");
     }
 </script>
