Select all is working, deselect all is working, may folder data is added to bottom of lists

--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -223,6 +223,11 @@
         }
     </tbody>
 </table>
+<hr class="separator" />
+<div class="d-flex w-100 justify-content-end text-dark">
+    <span><b>@Model.Folders.Count Folders,</b></span>
+    <span class="ms-1"><b>@Model.Files.Count Files</b></span>
+</div>
 <script type="text/javascript">
     window.onload = init;
 
