--- a/NCloud/NCloud/Views/Drive/DownloadItems.cshtml
+++ b/NCloud/NCloud/Views/Drive/DownloadItems.cshtml
@@ -1,6 +1,7 @@
 ﻿@model DriveDownloadViewModel
 
 @{
+    ViewData["title"] = "Download";
     int i = 0;
 }
 
@@ -16,14 +17,25 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(CloudFolder? item in Model.Folders)
+            @if (Model.ItemsForDownload?.Count > 0)
+            {
+                <tr>
+                    <td>
+                        <div class="d-flex-inline align-middle">
+                            <input type="checkbox" class="form-check-input" id="selectAll" />
+                            <label class="form-check-label ms-2">Select All</label>
+                        </div>
+                    </td>
+                </tr>
+            }
+            @foreach (CloudFolder? item in Model.Folders)
             {
                 if (item != null)
                 {
                     <tr>
                         <td>
                             <div class="d-flex-inline">
-                                <input type="checkbox" asp-for="ItemsForDownload![i]" class="form-check-input" value="@item.Info.Name"/>
+                                <input type="checkbox" asp-for="ItemsForDownload![i]" class="form-check-input" value="@item.Info.Name" />
                                 <span id="iconforitemtype ms-2">
                                     <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-bottom">
                                 </span>
@@ -55,6 +67,45 @@
         </tbody>
     </table>
     <div class="d-flex w-100 justify-content-center">
-        <button type="submit" class="btn btn-outline-secondary border border-secondary border-3"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></button>
+        <button type="submit" class="btn btn-outline-secondary border border-secondary border-3" id="downloadBtn"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></button>
     </div>
 </form>
+<script type="text/javascript">
+    function StartFunction() {
+        document.getElementById("selectAll").addEventListener("click", SelectAllClicked, false)
+        document.getElementById("downloadBtn").addEventListener("click", CallDeselect, false)
+    }
+
+    function SelectAllClicked(e) {
+        console.log("belep");
+        if (document.getElementById("selectAll").checked) {
+            SelectAll();
+        } else {
+            DeselectAll();
+        }
+    }
+
+    function CallDeselect(e){
+        setTimeout(DeselectAll,1);
+    }
+
+    function SelectAll() {
+        const checkboxes = document.getElementsByTagName("input");
+        for (let e of checkboxes) {
+            if (!e.checked) {
+                e.checked = true;
+            }
+        }
+    }
+
+    function DeselectAll() {
+        let checkboxes = document.getElementsByTagName("input");
+        for (let e of checkboxes) {
+            if (e.checked) {
+                e.checked = false;
+            }
+        }
+    }
+
+    StartFunction();
+</script>
