--- a/NCloud/NCloud/Views/Drive/DownloadItems.cshtml
+++ b/NCloud/NCloud/Views/Drive/DownloadItems.cshtml
@@ -5,8 +5,9 @@
     int i = 0;
 }
 
-<div class="w-100 bg-secondary rounded">
+<div class="d-flex justify-content-between w-100 bg-secondary rounded">
     <a asp-action="Details" asp-controller="Drive" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+    <span class="btn"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></span>
 </div>
 
 <form asp-action="DownloadItems">
