--- a/NCloud/NCloud/Views/Drive/DeleteItems.cshtml
+++ b/NCloud/NCloud/Views/Drive/DeleteItems.cshtml
@@ -4,8 +4,9 @@
     int i = 0;
 }
 
-<div class="w-100 bg-danger rounded">
+<div class="d-flex justify-content-between w-100 bg-danger rounded">
     <a asp-action="Details" asp-controller="Drive" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+    <span class="btn"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></span>
 </div>
 
 <form asp-action="DeleteItems">
