--- a/NCloud/NCloud/Views/Shared/Components/Test.razor
+++ b/NCloud/NCloud/Views/Shared/Components/Test.razor
@@ -1,18 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Components
 @namespace NCloud.Views.Shared.Components
 
-<div>
-    <h3>Test</h3>
-    <button @onclick="GetData">Click Me!</button>
-    <p>@Data</p>
-</div>
+<StandaloneCodeEditor Id="my-editor-instance-id" />
 
 @code {
-    [Parameter]
-    public int Data { get; set; } = 0;
-
-    private void GetData()
-    {
-        Data++;
-    }
+    
 }
