--- a/NCloud/NCloud/Views/Shared/Components/_Imports.razor
+++ b/NCloud/NCloud/Views/Shared/Components/_Imports.razor
@@ -6,3 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using System.IO
+@using BlazorMonaco
+@using BlazorMonaco.Editor
+@using BlazorMonaco.Languages
