--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -28,7 +28,7 @@
                             </a>
                         </li>
                         <li class="nav-item my-2">
-                            <a href="#" class="align-middle px-0 text-decoration-none text-dark">
+                            <a asp-controller="Editor" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/code-slash.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Editor</span>
                             </a>
                         </li>
