--- a/NCloud/NCloud/Views/Editor/Index.cshtml
+++ b/NCloud/NCloud/Views/Editor/Index.cshtml
@@ -6,6 +6,6 @@
     ViewData["Title"] = "Editor";
 }
 
-<div class="border border-dark border-3">
+<div class="border border-dark border-3 w-100 h-100 rounded">
     <component type="@typeof(Editor)" render-mode="ServerPrerendered" />
 </div>
