--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -28,8 +28,18 @@
                             </a>
                         </li>
                         <li class="nav-item my-2">
+                            <a asp-controller="Drive" asp-action="SharedDetails" asp-route-id="0" class="align-middle px-0 text-decoration-none text-dark">
+                                <span class="d-inline m-1"><img src="~/utilities/cloud.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Shared Files</span>
+                            </a>
+                        </li>
+                        <li class="nav-item my-2">
                             <a asp-controller="Editor" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
-                                <span class="d-inline m-1"><img src="~/utilities/code-slash.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Editor</span>
+                                <span class="d-inline m-1"><img src="~/utilities/code-slash.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Code Editor</span>
+                            </a>
+                        </li>
+                        <li class="nav-item my-2">
+                            <a asp-controller="Editor" asp-action="IndexText" class="align-middle px-0 text-decoration-none text-dark">
+                                <span class="d-inline m-1"><img src="~/utilities/file-text-fill.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Text Editor</span>
                             </a>
                         </li>
                         <li class="nav-item my-2">
