--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <div class="container-fluid">
         <div class="row flex-nowrap">
-            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-primary border border-dark fixed navwidth">
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 background-color border border-dark fixed navwidth">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-dark min-vh-100">
                     <a asp-controller="Drive" asp-action="Index" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto">
                         <span class="fs-5 d-none d-sm-inline align-middle justify-content-center"><img src="/utilities/cloud_logo_no_text.png" alt="cloudlogo" class="me-3 logo"></span>
